svc-ingress-green.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-green
  namespace: nginx-demo
spec:
  ingressClassName: nginx
  rules:
  - host: green.nginx.example.com
    http:
      paths:
      - backend:
          serviceName: nginx-deploy-green
          servicePort: 80


---

apiVersion: v1
kind: Service
metadata:
  name: nginx-deploy-green
  namespace: nginx-demo
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    run: nginx-green
